ajout de l'id top-banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
 <div class="git">
-    <h1>Cours GIT - DWWM Bassin</h1>
+    <h1 id="top-banner">Cours GIT - DWWM Bassin</h1>
 </div>
 
 
