--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <div class="git">
     <h1 id="top-banner">Cours GIT - DWWM Bassin</h1>
 </div>
+<div>
+    <h2>Ma Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, magnam.</p>
 
+</div>
+<div><h2>Mes récomprenses</h2>
+    <p>en construction</p>
+</div>
 
 </body>
 </html>
