--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </div>
 <div><h2>Mes récomprenses</h2>
-    <p>en construction</p>
+    <img src="image/medal_bronze.png" alt="" /> 
 </div>
 
 </body>
