ajout de commende git

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 <div><h2>Mes récomprenses</h2>
     <img src="image/medal_bronze.png" alt="" /> 
 </div>
-
+<div>
+    <ul>
+        <li>Mes commende GIT</li>
+        <li>Git Pull</li>
+    </ul>
+</div>
 </body>
 </html>
